Test/grafana k6 rollback (#44)
* feat: implement notification event-driven architecture

* fix: bug cast number data in upload media feature

* fix: bug in L1 cache in direct chat

* fix: SerializationException (DateTime) when save data of GroupResponse to Redis cache using Jackson

* fix: get conversation detail commented

* fix: get itinerary by id path variable

* docs: path variable and request param explicit define

* fix: @Async background threads (AI generation) lose the Security Context, making updatedBy null

* fix: Spring Boot 3.3+ warns against direct PageImpl serialization to maintain JSON stability.

* docs: add CORS for admin website port 5173

* chore: update .gitignore

* feat: auto-complete location api (Search TripJoy DB first -> call Google Places API -> Merge and deduplicate results)

* refactor: merge search post api & get all post api

* refactor: get users api (pagable)

* fix: full text search feature in many tables: users, posts, locations, chatmessages

* fix: resolve missing place_ids via Google Places Autocomplete API

* docs: add itiCount field in GroupResponse

* fix: 6002 Code - Database constraint violation in CREATE A POST API

* fix: api POST suggest-location (1003: Resource not found)

* feat: add groupMemberCount field in ItineraryResponse

* fix: api POST comment (1001: invalidate message key)

* fix: comment fields null pointer exception (builder default)

* feat: update comment apis

* fix: groupMemberCount to peopleQuantity in ItineraryResponse

* fix: modify iti by AI

* fix: redundant symbol }

* refactor(ai-service): reintegrate apis from tripjoy-ai-service

* feat: implement strategy to share a post into conversation

* docs: add budgetEstimate & totalExpense in ItineraryResponse to serve itinerary dashboard feature in frontend

* feat: dynamic system configuration feature for admin

* fix: missing place_id & location - add raw location fallback fields to TripItem for AI integration

* fix: remove unused raw location field