@@ -4,6 +4,7 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
@@ -18,6 +19,9 @@ import org.springframework.transaction.annotation.Transactional;
 import com.tripjoy.api.configuration.redis.RedisCacheConfig;
 
 import com.tripjoy.api.dto.event.GroupCreatedEvent;
+import com.tripjoy.api.dto.event.GroupLeadershipTransferredEvent;
+import com.tripjoy.api.dto.event.GroupRoleChangedEvent;
+import com.tripjoy.api.dto.event.GroupUpdatedEvent;
 import com.tripjoy.api.dto.event.MemberJoinedGroupEvent;
 import com.tripjoy.api.dto.event.MemberRemovedFromGroupEvent;
 import com.tripjoy.api.dto.request.GroupRequest;
@@ -66,6 +70,7 @@ public class GroupService implements IGroupService {
     }
 
     @Transactional(readOnly = true)
+    @Cacheable(value = RedisCacheConfig.CACHE_GROUPS_BY_USER, key = "#userId")
     public List<GroupResponse> getMyGroups(UUID userId) {
         // Use NOT DELETED query to filter soft-deleted memberships
         List<GroupMember> memberRecords = groupMemberRepository.findByUserIdAndNotDeleted(userId);
@@ -74,7 +79,9 @@ public class GroupService implements IGroupService {
                 .map(GroupMember::getGroup)
                 .filter(group -> !group.getSoftDeleteInfo().isDeleted()) // Also filter deleted groups
                 .map(groupMapper::toGroupResponse)
-                .toList();
+                // Use collect(Collectors.toList()) instead of .toList() to ensure the result is a mutable ArrayList.
+                // Immutable collections from .toList() lack a default constructor, causing Jackson deserialization failures in Redis.
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -185,6 +192,8 @@ public class GroupService implements IGroupService {
         groupMapper.updateGroup(group, request);
         Group updated = groupRepository.save(group);
 
+        eventPublisher.publishEvent(new GroupUpdatedEvent(updated, currentUser));
+
         return groupMapper.toGroupResponse(updated);
     }
 
@@ -199,7 +208,7 @@ public class GroupService implements IGroupService {
         List<GroupMember> members = groupMemberRepository.findByGroupOrderByRoleAsc(group);
 
         // Map to response DTOs
-        return members.stream().map(groupMapper::toGroupMemberResponse).toList();
+        return members.stream().map(groupMapper::toGroupMemberResponse).collect(Collectors.toList());
     }
 
     @Override
@@ -307,9 +316,13 @@ public class GroupService implements IGroupService {
             throw new AppException(ErrorCode.CANNOT_ASSIGN_LEADER_ROLE);
         }
 
+        GroupRole oldRole = memberToUpdate.getRole();
+
         // 5. Update role
         memberToUpdate.setRole(request.getRole());
         GroupMember updated = groupMemberRepository.save(memberToUpdate);
+
+        eventPublisher.publishEvent(new GroupRoleChangedEvent(group, currentUser, memberToUpdate.getUser(), oldRole, request.getRole()));
 
         return groupMapper.toGroupMemberResponse(updated);
     }
@@ -358,6 +371,8 @@ public class GroupService implements IGroupService {
         // New member -> LEADER
         newLeader.setRole(GroupRole.LEADER);
         groupMemberRepository.save(newLeader);
+
+        eventPublisher.publishEvent(new GroupLeadershipTransferredEvent(group, currentUser, newLeaderUser));
     }
 
     // === CASCADE SOFT DELETE METHODS ===
@@ -452,6 +467,6 @@ public class GroupService implements IGroupService {
         }
         return groupRepository.searchByName(keyword.trim()).stream()
                 .map(groupMapper::toGroupResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
