@@ -3,10 +3,13 @@ package com.tripjoy.api.service.impl;
 import java.util.HashSet;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.Caching;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -128,11 +131,15 @@ public class UserService implements IUserService {
 
     // ==================== Admin Mutations ====================
 
+    @Override
     @PreAuthorize("hasRole('ADMIN')")
-    public List<UserResponse> getUsers() {
-        return userRepository.findAll().stream()
-                .map(userMapper::toUserResponse)
-                .toList();
+    public Page<UserResponse> getUsers(Pageable pageable, String q) {
+        if (q != null && !q.trim().isBlank()) {
+            return userRepository.searchByUsernameOrEmailPaged(q.trim(), pageable)
+                    .map(userMapper::toUserResponse);
+        }
+        return userRepository.findAll(pageable)
+                .map(userMapper::toUserResponse);
     }
 
     public UserResponse createUser(UserCreationRequest request) {
@@ -218,6 +225,17 @@ public class UserService implements IUserService {
         if (keyword == null || keyword.trim().isEmpty()) return List.of();
         return userRepository.searchByUsernameOrEmail(keyword.trim()).stream()
                 .map(userMapper::toUserSimpleResponse)
-                .toList();
+                // Use collect(Collectors.toList()) instead of .toList() to ensure the result is a mutable ArrayList.
+                // Immutable collections from .toList() lack a default constructor, causing Jackson deserialization failures in Redis.
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Page<UserSimpleResponse> searchUsersGlobal(String keyword, Pageable pageable) {
+        if (keyword == null || keyword.trim().isEmpty()) {
+            return Page.empty();
+        }
+        return userRepository.searchGlobalUsers(keyword.trim(), pageable)
+                .map(userMapper::toUserSimpleResponse);
     }
 }
